--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ coverage
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+#webstorm
+.idea
+.idea/*
+
 # Bower dependency directory (https://bower.io/)
 bower_components
 
@@ -102,3 +106,6 @@ dist
 
 # TernJS port file
 .tern-port
+/howtodo/node_modules/
+/howtodo/node_modules/
+/howtodo/node_modules/
